--- a/example/index.html
+++ b/example/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="components/lungo.brownie/lungo.theme.css" id="theme-stylesheet">
     <link rel="stylesheet" href="components/lungo.icon/lungo.icon.css">
     <!-- App Stylesheet -->
-    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="static/stylesheets/app.css">
 </head>
 
 <body class="app">
@@ -59,7 +59,7 @@
             <nav>
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
-            <img src="assets/logo.png" class="title centered">
+            <img src="static/images/logo.png" class="title centered">
 
             <nav class="right">
                 <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article"></a>
@@ -75,11 +75,11 @@
         </header>
 
         <nav data-control="groupbar" data-article="icon-symbol icon-media icon-toolbar icon-social icon-item">
-            <a href="#" data-view-article="icon-symbol" data-label="Symbol" data-async="app/articles/icon-symbol.html"></a>
-            <a href="#" data-view-article="icon-media" data-label="Media" data-async="app/articles/icon-media.html"></a>
-            <a href="#" data-view-article="icon-toolbar" data-label="Toolbar" data-async="app/articles/icon-toolbar.html"></a>
-            <a href="#" data-view-article="icon-social" data-label="Social"  data-async="app/articles/icon-social.html"></a>
-            <a href="#" data-view-article="icon-item" data-label="Item" data-async="app/articles/icon-item.html"></a>
+            <a href="#" data-view-article="icon-symbol" data-label="Symbol" data-async="static/articles/icon-symbol.html"></a>
+            <a href="#" data-view-article="icon-media" data-label="Media" data-async="static/articles/icon-media.html"></a>
+            <a href="#" data-view-article="icon-toolbar" data-label="Toolbar" data-async="static/articles/icon-toolbar.html"></a>
+            <a href="#" data-view-article="icon-social" data-label="Social"  data-async="static/articles/icon-social.html"></a>
+            <a href="#" data-view-article="icon-item" data-label="Item" data-async="static/articles/icon-item.html"></a>
         </nav>
 
         <nav data-control="groupbar" data-article="list list-indented list-examples">
@@ -127,11 +127,11 @@
             name: 'Kitchen Sink',
             version: '2.1.0222',
             resources: [
-                'app/asides/features.html',
-                'app/asides/right.html',
-                'app/sections/form.html']
+                'static/asides/features.html',
+                'static/asides/right.html',
+                'static/sections/form.html']
         });
     </script>
-    <script src="app/app.js"></script>
+    <script src="static/javascripts/app.js"></script>
 </body>
 </html>
