--- a/example/static/asides/features.html
+++ b/example/static/asides/features.html
@@ -14,13 +14,13 @@
             </li>
 
             <!-- Layout & Navigation -->
-            <li data-view-section="layout" data-async="app/sections/layout.html">
+            <li data-view-section="layout" data-async="static/sections/layout.html">
                 <strong>Layout</strong>
                 <div class="tag right">5</div>
             </li>
 
             <!-- List -->
-            <li data-view-article="list" data-async="app/articles/list.html">
+            <li data-view-article="list" data-async="static/articles/list.html">
                 <strong>Lists</strong>
                 <div class="tag right">22</div>
             </li>
@@ -32,84 +32,84 @@
             </li>
 
             <!-- Asides -->
-            <li data-view-section="aside" data-async="app/sections/aside.html">
+            <li data-view-section="aside" data-async="static/sections/aside.html">
                 <strong>Aside</strong>
             </li>
 
             <!-- Menu -->
-            <li data-view-section="menu" data-async="app/sections/menu.html">
+            <li data-view-section="menu" data-async="static/sections/menu.html">
                 <div class="tag right">2</div>
                 <strong>Menu</strong>
             </li>
 
             <!-- Data-Attributes -->
-            <li data-view-article="data" data-async="app/articles/data.html">
+            <li data-view-article="data" data-async="static/articles/data.html">
                 <div class="tag right">9</div>
                 <strong>Data-attributes</strong>
             </li>
 
             <!-- Icons -->
-            <li data-view-article="icon-symbol" data-async="app/articles/icon-symbol.html">
+            <li data-view-article="icon-symbol" data-async="static/articles/icon-symbol.html">
                 <div class="tag right">+250</div>
                 <strong>Icons</strong>
             </li>
 
             <!-- Scrolls -->
-            <li data-view-section="scroll" data-async="app/sections/scroll.html">
+            <li data-view-section="scroll" data-async="static/sections/scroll.html">
                 <div class="tag right">2</div>
                 <strong>Scrolls</strong>
             </li>
 
             <!-- Touch Events -->
-            <li data-view-article="touchevents" data-async="app/articles/touchevents.html">
+            <li data-view-article="touchevents" data-async="static/articles/touchevents.html">
                 <div class="tag right">19</div>
                 <strong>Touch Events</strong>
             </li>
 
             <!-- Layout Events -->
-            <li data-view-section="layoutevents" data-async="app/sections/layoutevents.html">
+            <li data-view-section="layoutevents" data-async="static/sections/layoutevents.html">
                 <div class="tag right">2</div>
                 <strong>Layout Events</strong>
             </li>
 
             <!-- Notifications -->
-            <li data-view-article="notification" data-async="app/articles/notification.html">
+            <li data-view-article="notification" data-async="static/articles/notification.html">
                 <div class="tag right">8</div>
                 <strong>Notifications</strong>
             </li>
 
             <!-- Pull & Refresh -->
-            <li  data-view-section="pull" data-async="app/sections/pull.html">
+            <li  data-view-section="pull" data-async="static/sections/pull.html">
                 <div class="tag right">1</div>
                 <strong>Pull & Refresh</strong>
             </li>
 
             <!-- Carousel -->
-            <li data-view-section="carousel" data-async="app/sections/carousel.html">
+            <li data-view-section="carousel" data-async="static/sections/carousel.html">
                 <div class="tag right">1</div>
                 <strong>Carousel</strong>
             </li>
 
             <!-- Environment -->
-            <li data-view-article="environment" data-async="app/articles/environment.html">
+            <li data-view-article="environment" data-async="static/articles/environment.html">
                 <div class="tag right">1</div>
                 <strong>Environment</strong>
             </li>
 
             <!-- Buttons & Colours -->
-            <li data-view-article="buttons" data-async="app/articles/buttons.html">
+            <li data-view-article="buttons" data-async="static/articles/buttons.html">
                 <div class="tag right">14</div>
                 <strong>Buttons & Colours</strong>
             </li>
 
             <!-- Theme roller -->
-            <li  data-view-article="themeroller" data-async="app/articles/theme.html">
+            <li  data-view-article="themeroller" data-async="static/articles/theme.html">
                 <div class="tag right">4</div>
                 <strong>Theme roller</strong>
             </li>
 
             <!-- Grid System -->
-            <li data-view-article="grid" data-async="app/articles/grid.html">
+            <li data-view-article="grid" data-async="static/articles/grid.html">
                 <strong>Grid System</strong>
             </li>
         </ul>
