--- a/example/static/sections/carousel.html
+++ b/example/static/sections/carousel.html
@@ -3,8 +3,8 @@
         <div class="centered title">Photo Nº<span>1</span></div>
 
         <nav class="right">
-            <a href="#" data-action="carousel" data-direction="left" data-icon="left" class="button"></a>
-            <a href="#" data-action="carousel" data-direction="right" data-icon="right" class="button"></a>
+            <a href="#" data-action="carousel" data-direction="left" data-icon="arrow-left"></a>
+            <a href="#" data-action="carousel" data-direction="right" data-icon="arrow-right"></a>
         </nav>
     </header>
     <article id="carousel-article" class="active block" data-control="carousel">
