Pull&Refresh improved

--- a/example/static/sections/pull.html
+++ b/example/static/sections/pull.html
@@ -1,29 +1,19 @@
 <section id="pull" data-pull="normal" data-transition="slide">
+    <div class="normal" data-control="pull" data-icon="arrow-down" data-loading="black">
+        <strong>title</strong>
+    </div>
+
+
+
     <header data-title="Pull & Refresh" data-back="home"></header>
 
     <article class="active list indented">
         <ul>
-             <li class="dark" data-icon="help">
+             <li class="contrast" data-icon="ok">
                     <strong>
                     Test this featury only drag down.
                 </strong>
                 <small>This element has an associated event</small>
-            </li>
-            <li data-icon="brand html5" class="feature">
-                <strong>HTML5 Optimized Apps</strong>
-                Lungo Framework supports open web standards, such as HTML5, CSS3 and JavaScript. It brings consistent browser environment across mobiles, tvs and desktop devices.
-            </li>
-            <li data-icon="brand github-2" class="feature">
-                <strong>Open Source Project</strong>
-                Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
-            </li>
-            <li data-icon="book" class="feature">
-                <strong>Powerfull JavaScript API</strong>
-                Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
-            </li>
-            <li data-icon="brand branch" class="feature">
-                <strong>Multi-Device full support</strong>
-                Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
             </li>
         </ul>
     </article>
