Changes in theme

--- a/example/static/sections/form.html
+++ b/example/static/sections/form.html
@@ -1,4 +1,3 @@
-
 <section id="form" data-transition="slide">
     <header data-title="Form Elements" data-back="home">
         <nav class="right">
@@ -139,7 +138,7 @@
         </div>
     </article>
 
-    <article id="form-special" class=" indented scroll">
+    <article id="form-special" class="indented scroll">
         <div class="form" >
             <label>Specials</label>
             <fieldset data-icon="search">
@@ -185,10 +184,10 @@
                     <div data-control-checkbox="normal"></div>
                 </div>
                 <div>
-                    <div data-control-checkbox="twit-example" class="twitter"></div>
+                    <div data-control-checkbox="twit-example" class="icon twitter accept"></div>
                 </div>
                 <div>
-                    <div data-control-checkbox="ok-example" class="ok"></div>
+                    <div data-control-checkbox="ok-example" class="icon ok cancel"></div>
                 </div>
             </div>
             <br/>
@@ -196,7 +195,8 @@
             <button class="anchor margin-bottom" data-label="Normal"></button>
             <button class="anchor accept margin-bottom" data-icon="ok" data-label="Accept"></button>
             <button class="anchor cancel margin-bottom" data-icon="remove" data-label="Cancel"></button>
-            <button class="anchor secondary margin-bottom" data-icon="plus" data-label="Secondary"></button>
+            <button class="anchor warning margin-bottom" data-icon="remove" data-label="Warning"></button>
+            <button class="anchor color margin-bottom" data-icon="plus" data-label="Color"></button>
             <button class="anchor disabled" data-label="Disabled"></button>
         </div>
     </article>
