[data-os] attribute for bind elements to a determinate Operative System (ios, android, blackberry or firefoxOs)

--- a/example/index.html
+++ b/example/index.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="static/stylesheets/app.css">
 </head>
 
-<body class="app">
+<body>
 
     <section id="main" data-transition="" data-aside="features" class="drag">
         <header>
@@ -129,7 +129,8 @@
             resources: [
                 'static/asides/features.html',
                 'static/asides/right.html',
-                'static/sections/form.html']
+                'static/sections/form.html'],
+            history: false
         });
     </script>
     <script src="static/javascripts/app.js"></script>
