Kitchen sink --> remove unnecesary html element
in kitchen sink demo, removed unnecesary div element for pull&refresh
(now Lungo.Data initializes the section correctly)

--- a/example/static/sections/pull.html
+++ b/example/static/sections/pull.html
@@ -1,9 +1,4 @@
-<section id="pull" data-pull="normal" data-transition="slide">
-    <div class="normal" data-control="pull" data-icon="arrow-down" data-loading="black">
-        <strong>title</strong>
-    </div>
-
-
+<section id="pull" data-pull="arrow-down" data-transition="slide">
 
     <header data-title="Pull & Refresh" data-back="home"></header>
 
