--- a/example/navigation.html
+++ b/example/navigation.html
@@ -14,7 +14,7 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.theme.css">
+    <link rel="stylesheet" href="components/lungo.brownie/theme.lungo.css">
     <link rel="stylesheet" href="components/lungo.icon/lungo.icon.css">
 </head>
 
@@ -70,7 +70,7 @@
 
     <!-- Lungo dependencies -->
     <script src="components/quojs/quo.js"></script>
-    <script src="components/lungo.brownie/lungo.debug.js"></script>
+    <script src="components/lungo.brownie/lungo.js"></script>
     <!-- LungoJS - Sandbox App -->
     <script>
         Lungo.init({
